--- a/p003/index.html
+++ b/p003/index.html
@@ -4,8 +4,9 @@
 <head>
     <title>O planeta Marte</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <link rel="stylesheet" href="index.css">
 </head>
-    
+
 <body>
     <h3>Este é o fantastico planeta Marte!</h3>
     <img src="planet_mars.jpg" alt="Planeta Marte">
