--- a/pfmodulo/servicos.html
+++ b/pfmodulo/servicos.html
@@ -27,36 +27,36 @@
         <a href="contactos.html">Contatos</a>
     </nav>
 
-    <!--Quem somos-->
-    <section class="container-quem-somos">
-        <article class="servico">
-            <img src="assents/images/icon_ai.png" class="icone" alt="icone" alt="Inteligência Artificial">
-            <p class="servico-texto">
-                Somos especialistas em <span class="servico-texto-realce">Inteligência Atificial (AI)</span><br>
-                Trabalhamos para encontrar soluções tecnologicamente inteligentes para todas as áreas empresariais.
-            </p>
+    <!--servicos-->
+    <section class="container-servicos">
+
+        <h1 class="text-center">Os nossos serviços</h1>
+
+        <article>
+            <h3>Soluções inovadoras para sua empresa</h3>
+            <ul>
+                <li>Desenhamos novas soluções para almento da produtividade.</li>
+                <li>Almentamos a performace dos colaboradores.</li>
+                <li>Incremento garantido de 20% nos lucros da empresa.</li>
+            </ul>
         </article>
 
-        <article class="servico">
-            <img src="assents/images/icon_lab.png" class="icone" alt="icone" alt="Laboratório moderno">
-            <p class="servico-texto">
-                Nossos laboratórios são os mais modernos da atualidade.
-            </p>
+        <article>
+            <h3>Projetamos o futuro do seu negócio</h3>
+            <ol>
+                <li>Pensamos na melhor solução.</li>
+                <li>Desenvolvemos o produto em parceria consigo.</li>
+                <li>Aplicamos a solução na empresa.</li>
+                <li>Fasemos a monitoração do processo.</li>
+            </ol>
         </article>
 
-        <article class="servico">
-            <img src="assents/images/icon_computer.png" class="icone" alt="icone" alt="Programadores experientes">
-            <p class="servico-texto">
-                Os nossos colaboradores são os técnicos mais experiêntes do mercado.
-            </p>
-        </article>
     </section>
-
+    
     <!--ver servicos ou contactos-->
     <section class="container-servicos-contactos">
         <h1>Obtenha mais informações na área de serviços e contacte-nos</h1>
         <div class="botoes-servicos-contatos">
-            <a href="servicos.html">Ver serviços</a>
             <a href="contactos.html">Contactos</a>
         </div>
     </section>
